Applying new filter on ChatEvent list.